Added System interactions
- Display component interactions in sequence diagram
- Connect requirements to interactions

--- a/Design Analysis & dummy P.o.C/Design Analysis.tex
+++ b/Design Analysis & dummy P.o.C/Design Analysis.tex
@@ -908,9 +908,17 @@ Simultaneously we save all costs between pairs of variants in a list so that we 
 \par
 \endgroup
 
+\subsection{Uses/Interactions}
+The components from the section System Architecture and the related modules result in the following System flow:\\
 
-
-
+\begin{landscape}
+	\newgeometry{
+		total={250mm,210mm},
+		left=0mm
+	}
+\includegraphics[width=297mm,height=210mm]{"UML_Architecture/Application Interaction SD".png}
+\restoregeometry
+\end{landscape}
 
 \section{User Interface Design}
 \subsection{Application Control}
