Architectural Strategies added to pdf

--- a/Design Analysis & dummy P.o.C/Design Analysis.tex
+++ b/Design Analysis & dummy P.o.C/Design Analysis.tex
@@ -116,7 +116,7 @@ the business logic. Since the front-end acts as a of abstraction layer for our B
 A database system is not set up, since the project focus is the refining algorithm. However the applicatoins will keep track of the five last uploaded files and 
 their refined event logs. For this we will use the server file system. 
 
-\subsection{Enhancements}
+\subsection{Future Enhancements}
 In order to realise a future development following measure will be implemented.
 
 Using the \textit{abstract class} in combinadtion with the \textit{factory} pattern to exchange important software and algorithms components. 
